<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authendication.login.LoginActivity">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/spacing_200"
        android:layout_height="@dimen/spacinsg_219"
        android:layout_marginStart="@dimen/spacing_88"
        android:layout_marginEnd="@dimen/spacing_102"
        android:layout_marginTop="@dimen/spacing_52"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_36"
        android:layout_marginTop="@dimen/spacing_48"
        android:fontFamily="@font/lato"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/font_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginStart="@dimen/spacing_26"
        android:layout_marginTop="@dimen/spacing_9"
        android:layout_marginEnd="@dimen/spacing_30"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_round_corner_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_36"
        android:layout_marginTop="@dimen/spacing_27"
        android:fontFamily="@font/lato"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/font_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginStart="@dimen/spacing_26"
        android:layout_marginTop="@dimen/spacing_9"
        android:layout_marginEnd="@dimen/spacing_30"
        android:inputType="textPassword"
        android:background="@drawable/bg_round_corner_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/spacing_215"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginTop="@dimen/spacing_61"
        android:background="@drawable/bg_round_corner_btn_signup"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <TextView
        android:id="@+id/tv_do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_17"
        android:fontFamily="@font/lato"
        android:text="@string/tv_don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:paddingStart="@dimen/spacing_7"
        android:paddingEnd="@dimen/spacing_7"
        android:text="@string/sign_up"
        android:textColor="@color/purple"
        android:textSize="@dimen/font_18"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_do_not_have_account"
        app:layout_constraintStart_toEndOf="@+id/tv_do_not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>