<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authendication.signup.SignupActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/spacing_225"
        android:layout_height="@dimen/spacing_225"
        android:layout_marginTop="@dimen/spacing_60"
        android:src="@drawable/ic_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_36"
        android:layout_marginTop="@dimen/spacing_40"
        android:text="Username"
        android:textColor="@color/black"
        android:textSize="@dimen/spacing_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginLeft="@dimen/spacing_28"
        android:layout_marginRight="@dimen/spacing_28"
        android:background="@drawable/bg_round_corner_et"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_36"
        android:layout_marginTop="@dimen/spacing_28"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/spacing_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginLeft="@dimen/spacing_28"
        android:layout_marginRight="@dimen/spacing_28"
        android:background="@drawable/bg_round_corner_et"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/spacing_215"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_round_corner_btn_signup"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />
    <TextView
        android:id="@+id/tv_Already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_17"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_7"
        android:paddingEnd="@dimen/spacing_7"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_18"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Already_have_an_account"
        app:layout_constraintStart_toEndOf="@+id/tv_Already_have_an_account" />

</androidx.constraintlayout.widget.ConstraintLayout>